<resources>
    <string name="app_name">GuideApp</string>
    <string name="out_side_1">1 - Climbat Amman</string>
    <string name="out_side_2">2 - Amman Citadel</string>
    <string name="out_side_3">3 - Temple of Hercules</string>
    <string name="out_side_4">4 - The Forest Park</string>
    <string name="out_side_5">5 - The Hashemite Plaza</string>
    <string name="out_side_6">6 - The Royal Autimobile Museum</string>
    <string name="out_side_7">7 - Amman National Park</string>
    <string name="out_side_8">8 - Roman Nymphaeum Amman</string>
    <string name="out_side_9">9 - Nabed Art Gallery</string>
    <string name="out_side_10">10 - The Jordan Museum</string>
    <string name="out_side_address_1">Address: Climbat Amman Al Quds St 687 Naour</string>
    <string name="out_side_address_2">Address: K. Ali Ben Al-Hussein St. 146, Amman</string>
    <string name="out_side_address_3">Address: Museum St 132, Amman</string>
    <string name="out_side_address_4">Address: Al-Urdon St., Amman</string>
    <string name="out_side_address_5">Address: Al-Hashemi St. 97, Amman</string>
    <string name="out_side_address_6">Address: At Tibbiyya, Amman</string>
    <string name="out_side_address_7">Address: 15, Amman</string>
    <string name="out_side_address_8">Address: Al-Hashemi St., Amman</string>
    <string name="out_side_address_9">Address: Nabad Art Gallery, Othman Bin Affan St 46, Amman</string>
    <string name="out_side_address_10">Address: Ali bin، Abu Taleb St., Amman</string>
    <string name="out_side_activities">Out Side Activities</string>
    <string name="your_guide_in_amman">Your Guide in Amman</string>
    <string name="restaurants">Restaurants</string>
    <string name="schools">Schools</string>
    <string name="hospitals">Hospitals</string>
    <string name="amman">Amman</string>
    <string name="hospital_1">1 - Jordan Hospital</string>
    <string name="hospital_2">2 - Istishari Hospital</string>
    <string name="hospital_3">3 - Ibn Al-Haytham Hospital</string>
    <string name="hospital_4">4 - Al Rashid Hospital</string>
    <string name="hospital_5">5 - King Hussain Cancer Hospital</string>
    <string name="hospital_6">6 - Al Khalidi Hospital</string>
    <string name="hospital_7">7 - Istiklal Hospital</string>
    <string name="hospital_8">8 - Islamic General Hospital</string>
    <string name="hospital_9">9 - Al Maqased Hospital</string>
    <string name="hospital_10">10 - Al Esraa Hospital</string>
    <string name="hospital_address_1">Address: An-Nuzha St. 9, Amman</string>
    <string name="hospital_address_2">Address: 44 Al Kindi Street, King Abdallah Gardens Intersection، Amman</string>
    <string name="hospital_address_3">Address: XVWF+R72, Amman</string>
    <string name="hospital_address_4">Address: Abu Nsair، Amman</string>
    <string name="hospital_address_5">Address: Queen Rania St 202, Amman</string>
    <string name="hospital_address_6">Address: Al Khalidi Hospital and Medical Center, Ibn Khaldoun St. 39, Amman 11183</string>
    <string name="hospital_address_7">Address: Istiklal Hospital Al، Istiqlal St 55, Amman</string>
    <string name="hospital_address_8">Address: Al-Shariaah College St. 2, Amman</string>
    <string name="hospital_address_9">Address: Ruba el-Adawiya St, Jerusalem</string>
    <string name="hospital_address_10">Address: Al Esra hospital outpatient clinic queen Rania street St B204, Amman</string>
    <string name="school_1">1 - Al Saadah Collage Schools</string>
    <string name="school_2"><![CDATA[2 - Ahliyyah & Mutran School]]></string>
    <string name="school_3">3 - Oxford School</string>
    <string name="school_4">4 - The International Academy</string>
    <string name="school_5">5 - The International School of Choueifat</string>
    <string name="school_6">6 - Al Asriyya School</string>
    <string name="school_7">7 - Amman Academy Jordan</string>
    <string name="school_8">8 - International Independent Schools</string>
    <string name="school_9">9 - International Leaders Academy</string>
    <string name="school_10">10 - Islamic Educational College</string>
    <string name="school_address_1">Address: Istiqlal St, Amman</string>
    <string name="school_address_2">Address: Ali Reda Ar-Rikabi St., Amman</string>
    <string name="school_address_3">Address: Sport City - Martyr Memorial Street، Amman</string>
    <string name="school_address_4">Address: XRJF+CX9, Amman 11814</string>
    <string name="school_address_5">Address: Airport Rd., Amman 11810</string>
    <string name="school_address_6">Address: Al Asriyya Schools, George Akarsheh St 6, Amman</string>
    <string name="school_address_7">Address: Sulayman Abd Al Qadir As Sukkari، Amman</string>
    <string name="school_address_8">Address: Airport Rd., Amman</string>
    <string name="school_address_9">Address: VVQF+2XX, Amman</string>
    <string name="school_address_10">Address: Al-Hakem An-Nisabouri St., Amman</string>
    <string name="restaurant_1">1 - Eostrix Gastro Pub</string>
    <string name="restaurant_2">2 - Caprice</string>
    <string name="restaurant_3">3 - Nur Lebanese Dining</string>
    <string name="restaurant_4">4 - Salt</string>
    <string name="restaurant_5">5 - Nasim</string>
    <string name="restaurant_6">6 - Tamara</string>
    <string name="restaurant_7">7 - Bourj Al Hamam</string>
    <string name="restaurant_8">8 - Pizza Nina</string>
    <string name="restaurant_9">9 - La Capitale</string>
    <string name="restaurant_10"><![CDATA[\"10 - V Lounge & Restaurant \"]]></string>
    <string name="restaurant_address_1">Address: Abu Salma Al-Khelal St., Amman</string>
    <string name="restaurant_address_2">Address: 6 Beirut St, JO, 11183، Amman</string>
    <string name="restaurant_address_3">Address: 6 Beirut Street 5th Circle Abdoun Amman, 11183</string>
    <string name="restaurant_address_4">Address: 6 Beirut Street 5th Circle Abdoun Amman, 11183</string>
    <string name="restaurant_address_5">Address: 6 Beirut Street 5th Circle Abdoun Amman, 11183</string>
    <string name="restaurant_address_6">Address: The St. Regis Amman, Amman</string>
    <string name="restaurant_address_7">Address: InterContinental Jordan, Al Kulliyah Al Elmiyah Al Eslamiyah St 66, Amman 11180</string>
    <string name="restaurant_address_8">Address: Saleh Ali Zaki St. 55, Amman 11180</string>
    <string name="restaurant_address_9">Address: 5th Circle، Kindi St, Amman</string>
    <string name="restaurant_address_10">Address: K. Faysal Ben Abdul Aziz St., Amman</string>
</resources>